gcc/testsuite/g++.dg/modules/mod-stamp-1_d.C
// { dg-prune-output "compilation terminated" }

import Bar;
// { dg-error "CRC mismatch" "Foo.nms:" { target *-*-* } 0 }
// { dg-error "failed to import" "Bar.nms:" { target *-*-* } 0 }
// { dg-error "declining" "Bar.nms:" { target *-*-* } 0 }

int bill ();
